# unicon

./: .env.example  .gitignore  CLAUDE.md  CLI.md  DEVELOPMENT.md  DOCS_SUMMARY.md  Kaizen.md  LLMs.txt  MCP_SERVER_PUBLISHED.md  README.md  THIRD_PARTY_LICENSES.md  drizzle.config.ts  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  unicon-brandmark
.claude/docs/: DOCS_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  Kaizen.md  MCP_SERVER_PUBLISHED.md  MCP_TESTING_CHECKLIST.md  PUBLISH_MCP_SERVER.md  README.md
.claude/sprites/: 01-context-based-search.md  02-icon-name-display.md  03-icon-style-consistency.md  04-bundle-empty-state-icon.md  05-cli-tool.md  05-premade-category-bundles.md  06-icon-library-integrations.md  07-brand-logo-library.md  08-multi-format-export.md  09-figma-plugin.md  10-vscode-extension.md  11-npm-package.md  12-icon-customization-studio.md  12-mcp-server.md  13-api-developer-platform.md  15-cdn-hosting.md  (+4 more)
.husky/: pre-commit
docs/: mcp-integration.md  mcp-quick-reference.md  mcp-quickstart.md
drizzle/: 0000_worthless_hellcat.sql
extractor/: embeddings.py  main.py  mapper.py  mappings.json  pyproject.toml  registry.py
extractor/extractors/: __init__.py  base.py  feather.py  heroicons.py  hugeicons.py  iconoir.py  lucide.py  phosphor.py  remix.py  simple_icons.py  tabler.py
extractor/tmp_extract/: package.json
metallic-icon-component/: package.json
public/: disclaimer.txt  license.txt  privacy.txt  terms.txt
scripts/: generate-embeddings.ts  test-search-pagination.ts  update-categories.ts  warm-cache.ts
(+190 files in other folders)
