[project]
name = "unicon-extractor"
version = "0.1.0"
description = "Extract icons from Lucide, Phosphor, and HugeIcons"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "libsql-experimental>=0.0.47",
    "python-dotenv>=1.0.0",
    "rapidfuzz>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["extractors"]
